Incorporated eleven labs functionality
